# ssinker_navigation

./: CMakeLists.txt  README.md  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  package.xml
launch/: config.launch  kaboat_move_base.launch  navigation.launch
params/: base_local_planner_params.yaml  costmap_common_params.yaml
src/: pointfollower.cpp
